DeleteService: more cleanup